# gust

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  brainstorm.md  flake.nix
.claude/: settings.local.json
specs/: implementation.md  planning.md  progress.md
src/: app.rs  astro.rs  error.rs  main.rs
src/api/: alerts.rs  client.rs  convert.rs  geocoding.rs  mock.rs  mod.rs  types.rs
src/cache/: mod.rs  storage.rs
src/config/: mod.rs  settings.rs
src/ui/: footer.rs  header.rs  layout.rs  mod.rs  theme.rs
src/ui/graphs/: alerts.rs  humidity.rs  mod.rs  precipitation.rs  temperature.rs
src/ui/graphs/snapshots/: gust__ui__graphs__alerts__tests__alerts_renders_empty.snap  gust__ui__graphs__alerts__tests__alerts_renders_with_alerts.snap  gust__ui__graphs__humidity__tests__humidity_graph_empty_data.snap  gust__ui__graphs__humidity__tests__humidity_graph_renders.snap  gust__ui__graphs__precipitation__tests__precipitation_graph_empty_data.snap  gust__ui__graphs__precipitation__tests__precipitation_graph_renders.snap  gust__ui__graphs__temperature__tests__temperature_graph_empty_data.snap  gust__ui__graphs__temperature__tests__temperature_graph_renders.snap
src/ui/snapshots/: gust__ui__footer__tests__footer_error.snap  gust__ui__footer__tests__footer_loading.snap  gust__ui__footer__tests__footer_normal_mode.snap  gust__ui__footer__tests__footer_search_mode.snap  gust__ui__header__tests__header_no_data.snap  gust__ui__header__tests__header_renders_current_conditions.snap
